apply plugin:'application'
apply plugin:'eclipse'

sourceCompatibility = 1.8
version = '0.3044'
mainClassName = "com.hackcaffebabe.mtg.LauncherMTG"
applicationDefaultJvmArgs = ['-XX:+UseConcMarkSweepGC']

dependencies {
	compile fileTree(dir: 'lib', include: ['*.jar'], exclude:['junit*', 'hamcrest*'])
}

jar {
    manifest {
        attributes 'SplashScreen-Image': 'img/splash.jpg',
                   'Implementation-Version': version
    }
}